--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,55 @@
 <html>
     <head>
-
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <style>
+            body {
+                background-color:lightgrey;
+            }
+            .messenger-container {
+                width: 500px;
+                height:80%;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+            }
+            textarea {
+                resize: none;
+            }
+        </style>
     </head>
     <body>
-        <h1>Welcome to the Chat app</h1>
+
+        <div class="card messenger-container">
+            <div class="card-body">
+                <h3 class="text-center">Welcome to the Chat app</h3>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">My name is:</label>
+                    <input onkeyup="setAvatar();" type="text" class="form-control" id="avatar" aria-describedby="emailHelp" placeholder="Let everybody know...">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                    <textarea rows="10" class="form-control" id="talk-show" rows="3"></textarea>
+                </div>
+                <div class="input-group">
+                    <input id="user-message" onkeyup="sendType();" type="text" class="form-control" placeholder="Type here..." aria-label="Search for...">
+                    <span class="input-group-btn">
+                        <button onclick="send()" class="btn btn-primary" type="button">Send!</button>
+                    </span>
+                </div>
+                <div class="form-group">
+                    <p style="visibility:hidden" id="isType"></p>
+                </div>
+
+            </div>
+        </div>
+
+
         <script src="/socket.io/socket.io.js"></script>
         <script>
         function get()
@@ -20,25 +66,83 @@
         }
         </script>
         <script>
+            // Set socket
             var socket = io();
 
-            socket.on('connect', function() {
-                console.log('Connected to server');
+            // Get the avatar name from local storage
+            getAvatar();
 
+            function setAvatar()
+            {
+                var avatar = document.getElementById('avatar').value;
+                localStorage.setItem('avatar', avatar);
+                return localStorage.getItem('avatar');
+            }
+
+            function getAvatar()
+            {
+                var avatar = localStorage.getItem('avatar');
+                document.getElementById('avatar').value = avatar;
+                return avatar;
+            }
+
+            function send()
+            {
+                var mess = document.getElementById('user-message').value;
                 socket.emit('createMessage', {
-                    from: 'Browser',
-                    to: 'Server',
-                    text: 'Hey server! What\'s up?',
+                    from: setAvatar(),
+                    to: 'all',
+                    text: mess,
                     createdAt: get()
                 });
-            });
+                document.getElementById('user-message').value = '';
+            }
+
+            function receive(data)
+            {
+                var talk = document.getElementById('talk-show');
+                var old = talk.value;
+                talk.value = old + (old == '' ? '' : '\n') + '[' + data.createdAt.split(' ')[1] + '] ' + '[' + data.from + ']: ' + data.text;
+                console.log(talk);
+            }
+
+            function sendType()
+            {
+                socket.emit('type', {
+                    user: setAvatar(),
+                    type: true,
+                    createdAt: get()
+                });
+            }
+
+            function displayType(type)
+            {
+                if(type.user !== setAvatar())
+                {
+                    var display = document.getElementById('isType');
+                    display.innerHTML = type.user + ' is typeing';
+                    display.style.visibility = 'visible';
+                    setTimeout(function() {
+                        display.innerHTML = '';
+                        display.style.visibility = 'hidden';
+                    }, 1000);
+                }
+            }
 
             socket.on('disconnect', function() {
                 console.log('Disconected from server');
             });
 
+            // Receive message from server
             socket.on('newMessage', function(message) {
                 console.log('New message from Server', JSON.stringify(message, undefined, 2));
+                receive(message);
+            });
+
+            // If true means somebody is typeing
+            socket.on('newType', function(type) {
+                console.log(type.user, ' started typeing');
+                displayType(type);
             });
         </script>
     </body>
