--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
             textarea {
                 resize: none;
             }
+            #isType {
+                margin-top:10px;
+                visibility: hidden;
+                transition: all 0.5s ease-in-out;
+                text-align:center;
+            }
         </style>
     </head>
     <body>
@@ -34,16 +40,22 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">Example textarea</label>
-                    <textarea rows="10" class="form-control" id="talk-show" rows="3"></textarea>
+                    <textarea readonly rows="10" class="form-control" id="talk-show" rows="3"></textarea>
                 </div>
                 <div class="input-group">
-                    <input id="user-message" onkeyup="sendType();" type="text" class="form-control" placeholder="Type here..." aria-label="Search for...">
+                    <input id="user-message" onkeyup="sendType();" onkeypress="handle(event)" type="text" class="form-control" placeholder="Type here..." aria-label="Search for...">
                     <span class="input-group-btn">
-                        <button onclick="send()" class="btn btn-primary" type="button">Send!</button>
+                        <button id="send-button" onclick="send()" class="btn btn-primary" type="button">Send!</button>
                     </span>
                 </div>
                 <div class="form-group">
                     <p style="visibility:hidden" id="isType"></p>
+                </div>
+                <div id="error" style="display:none;"class="alert alert-danger" role="alert">
+                    This is a danger alert—check it out!
+                </div>
+                <div id="success" style="display:none;"class="alert alert-success" role="alert">
+                    This is a danger alert—check it out!
                 </div>
 
             </div>
@@ -51,6 +63,16 @@
 
 
         <script src="/socket.io/socket.io.js"></script>
+        <script>
+        function handle(e)
+        {
+            if(e.keyCode === 13)
+            {
+                e.preventDefault(); // Ensure it is only this code that rusn
+                send();
+            }
+        }
+        </script>
         <script>
         function get()
         {
@@ -88,14 +110,21 @@
 
             function send()
             {
-                var mess = document.getElementById('user-message').value;
-                socket.emit('createMessage', {
-                    from: setAvatar(),
-                    to: 'all',
-                    text: mess,
-                    createdAt: get()
-                });
-                document.getElementById('user-message').value = '';
+                // Check if the avatar name is set
+                var avatar = document.getElementById('avatar').value;
+                if(avatar !== "")
+                {
+                    var mess = document.getElementById('user-message').value;
+                    socket.emit('createMessage', {
+                        from: setAvatar(),
+                        to: 'all',
+                        text: mess,
+                        createdAt: get()
+                    });
+                    document.getElementById('user-message').value = '';
+                } else {
+                    triggerError('Please select an alias name first', 'error');
+                }
             }
 
             function receive(data)
@@ -120,14 +149,29 @@
                 if(type.user !== setAvatar())
                 {
                     var display = document.getElementById('isType');
-                    display.innerHTML = type.user + ' is typeing';
+                    display.innerHTML = type.user + ' is typing';
                     display.style.visibility = 'visible';
                     setTimeout(function() {
                         display.innerHTML = '';
                         display.style.visibility = 'hidden';
-                    }, 1000);
+                    }, 2000);
                 }
             }
+
+            function triggerError(message, type)
+            {
+                if(type == 'error')
+                {
+                    document.getElementById('error').innerHTML = message;
+                    document.getElementById('error').style.display = 'block';
+                }
+
+                setTimeout(function() {
+                    document.getElementById('error').style.display = 'none';
+                }, 5000);
+
+            }
+
 
             socket.on('disconnect', function() {
                 console.log('Disconected from server');
@@ -141,7 +185,7 @@
 
             // If true means somebody is typeing
             socket.on('newType', function(type) {
-                console.log(type.user, ' started typeing');
+                console.log(type.user, ' started typing');
                 displayType(type);
             });
         </script>
