add error check

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
         <style>
             body {
                 background-color:lightgrey;
@@ -31,7 +32,7 @@
     </head>
     <body>
 
-        <div class="card messenger-container">
+        <div class="card messenger-container animated fadeInDown">
             <div class="card-body">
                 <h3 class="text-center">Welcome to the Chat app</h3>
                 <div class="form-group">
@@ -51,10 +52,10 @@
                 <div class="form-group">
                     <p style="visibility:hidden" id="isType"></p>
                 </div>
-                <div id="error" style="display:none;"class="alert alert-danger" role="alert">
+                <div id="error" style="display:none;" class="alert alert-danger animated fadeInDown" role="alert">
                     This is a danger alert—check it out!
                 </div>
-                <div id="success" style="display:none;"class="alert alert-success" role="alert">
+                <div id="success" style="display:none;" class="alert alert-success" role="alert">
                     This is a danger alert—check it out!
                 </div>
 
@@ -164,9 +165,11 @@
                 {
                     document.getElementById('error').innerHTML = message;
                     document.getElementById('error').style.display = 'block';
+                    document.getElementById('avatar').classList.add('is-invalid', 'animated', 'tada');
                 }
 
                 setTimeout(function() {
+                    document.getElementById('avatar').classList.remove('is-invalid', 'animated', 'tada');
                     document.getElementById('error').style.display = 'none';
                 }, 5000);
 
