--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
+        <link rel="stylesheet" href="css/speech-bubble.css">
+        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/bubbly.css">
         <style>
             body {
                 background-color:lightgrey;
@@ -28,6 +31,14 @@
                 transition: all 0.5s ease-in-out;
                 text-align:center;
             }
+            .talks-container {
+                height:300px;
+                overflow: auto;
+                padding: 10px 20px;
+            }
+            .bubbly {
+                margin-bottom:5px;
+            }
         </style>
     </head>
     <body>
@@ -39,10 +50,15 @@
                     <label for="exampleInputEmail1">My name is:</label>
                     <input onkeyup="setAvatar();" type="text" class="form-control" id="avatar" aria-describedby="emailHelp" placeholder="Let everybody know...">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="exampleFormControlTextarea1">Example textarea</label>
                     <textarea readonly rows="10" class="form-control" id="talk-show" rows="3"></textarea>
+                </div> -->
+                <div class="talks-container">
+                    <div id="talks"></div>
                 </div>
+
+
                 <div class="input-group">
                     <input id="user-message" onkeyup="sendType();" onkeypress="handle(event)" type="text" class="form-control" placeholder="Type here..." aria-label="Search for...">
                     <span class="input-group-btn">
@@ -91,6 +107,7 @@
         <script>
             // Set socket
             var socket = io();
+            var talks = [];
 
             // Get the avatar name from local storage
             getAvatar();
@@ -113,16 +130,20 @@
             {
                 // Check if the avatar name is set
                 var avatar = document.getElementById('avatar').value;
+                var mess = document.getElementById('user-message').value;
+
                 if(avatar !== "")
                 {
-                    var mess = document.getElementById('user-message').value;
-                    socket.emit('createMessage', {
-                        from: setAvatar(),
-                        to: 'all',
-                        text: mess,
-                        createdAt: get()
-                    });
-                    document.getElementById('user-message').value = '';
+                    if(mess !== "")
+                    {
+                        socket.emit('createMessage', {
+                            from: setAvatar(),
+                            to: 'all',
+                            text: mess,
+                            createdAt: get()
+                        });
+                        document.getElementById('user-message').value = '';
+                    }
                 } else {
                     triggerError('Please select an alias name first', 'error');
                 }
@@ -130,10 +151,34 @@
 
             function receive(data)
             {
-                var talk = document.getElementById('talk-show');
-                var old = talk.value;
-                talk.value = old + (old == '' ? '' : '\n') + '[' + data.createdAt.split(' ')[1] + '] ' + '[' + data.from + ']: ' + data.text;
-                console.log(talk);
+
+                // var talk = document.getElementById('talk-show');
+
+                // var old = talk.value;
+                // talk.value = old + (old == '' ? '' : '\n') + '[' + data.createdAt.split(' ')[1] + '] ' + '[' + data.from + ']: ' + data.text;
+                // console.log(talk);
+
+                // Create new system
+                talks.push(data);
+                displayTalks();
+                console.log(talks);
+            }
+
+            function displayTalks()
+            {
+                var out = '';
+                for(var i = 0; i < talks.length; i++)
+                {
+                    if(talks[i].from == setAvatar())
+                    {
+                        out += `<div class="bubbly speech-bubble-me">${talks[i].createdAt.split(' ')[1]}: ${talks[i].text}</div>`;
+                    } else {
+                        out += `<div class="bubbly speech-bubble-you">${talks[i].createdAt.split(' ')[1]}: ${talks[i].text}</div>`;
+                    }
+                }
+                out += '<a id="final"></a>';
+                document.getElementById('talks').innerHTML = out;
+                window.location.href = "#final";
             }
 
             function sendType()
